# lingo-ai

./: .gitignore  README.md  apitest.py  audio_complete_test.py  audiotest.py  main.py  pyproject.toml  requirements.txt  test_clip.py
api/routes/: ai_routes.py
utils/: audio.py  files.py  text_to_speech.py  tts_kokoro.py
