[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.16.1",
    "kokoro>=0.9.4",
    "pydantic>=2.11.5",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "soundfile>=0.13.1",
    "uuid>=1.30",
]
